# dummy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: aitrainer.cpp  consoleclient.cpp  main.cpp  signalclient.cpp
src/game/: HumanPlayer.cpp  HumanPlayer.h  cards.cpp  cards.h  console_player.cpp  console_player.h  consoleplayer.cpp  consoleplayer.h  game.cpp  game.h  humanplayer.cpp  humanplayer.h  meld.cpp  meld.h  player.cpp  player.h
src/game/clients/: console_player.cpp  console_player.h  player.cpp  player.h  rule_bot.cpp  rule_bot.h
src/game/utils/: legal_move_engine.cpp  legal_move_engine.h
src/nn/: dlib_helper.h  nn_logic.cpp  nn_logic.h  nn_player.cpp  nn_player.h
src/nn/training/: cmaes_trainer.h  cpu_trainer.cpp  cpu_trainer.h
src/signalbot/: signal_player.cpp  signal_player.h  signalplayer.cpp  signalplayer.h
test/: test.cpp
